<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#773F51B5"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/Text1_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/image_view"
        app:srcCompat="@drawable/ac_logo" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:autofillHints="Username"
        android:hint="@string/user_hint"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E090808"
        android:textSize="20sp" />

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="Password"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        android:textColorHint="#9E171515"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/btn1"
            style="android:attr/ButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="5dp"
            android:layout_weight=".5"
            android:background="#3F51B5"
            android:text="@string/Text2_name"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btn2"
            style="android:attr/ButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_weight=".5"
            android:background="#3F51B5"
            android:text="@string/Text3_name" />
    </LinearLayout>


</LinearLayout>